--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -10,19 +10,34 @@ $divider-color: #bdbdbd;
 $icon-color: #000000;
 
 .topbar {
-  box-shadow: 0 1.4px 1.9px rgba(0, 0, 0, 0.042),
-    0 3.6px 4.3px rgba(0, 0, 0, 0.06), 0 6.8px 7.7px rgba(0, 0, 0, 0.069),
-    0 12.1px 12.8px rgba(0, 0, 0, 0.073), 0 21.2px 21.2px rgba(0, 0, 0, 0.074),
-    0 41.7px 37px rgba(0, 0, 0, 0.072), 0 123px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 13.6px 2.2px rgba(0, 0, 0, 0.008),
+    0 24.2px 5.3px rgba(0, 0, 0, 0.014), 0 32px 10px rgba(0, 0, 0, 0.019),
+    0 38.1px 17.9px rgba(0, 0, 0, 0.022), 0 45.8px 33.4px rgba(0, 0, 0, 0.025),
+    0 100px 80px rgba(0, 0, 0, 0.07);
+  border-bottom: 1px solid #666666;
   background: $first-color;
   width: 100vw;
-	height: 48px;
-	top: 0;
-	right: 0;
-	position: fixed;
-	
+  height: 48px;
+  top: 0;
+  right: 0;
+  position: fixed;
 }
-.backtohome{
-		color: red;
-		background: red
-	}
+.backtohome {
+  color: red;
+  background: red;
+}
+
+.home {
+  font-size: 32px;
+  padding: 0;
+  margin: 0;
+  font-weight: 700;
+}
+
+.backtohomeicon {
+  // fill: red;
+  // transform: scale(2);
+  height: 38px;
+  width: 36px;
+  margin: 4px;
+}
