--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    height: 2000px;
+  height: 2000px;
 }
 
 a {
@@ -14,4 +14,7 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.container {
+  padding: 0;
 }
