--- a/styles/main.module.sass
+++ b/styles/main.module.sass
@@ -17,8 +17,8 @@
   flex: 1
   display: flex
   flex-direction: column
-  justify-content: center
-  align-items: center
+  // justify-content: center
+  // align-items: center
 
 .footer
   width: 100%
@@ -125,3 +125,4 @@
 
 .white_space
   white-space: pre-line
+  margin-top: 20px
