--- a/components/get_content_and_convert/conver.module.sass
+++ b/components/get_content_and_convert/conver.module.sass
@@ -5,3 +5,8 @@
 	line-height: 1.3
 .ButtonLink
 	text-decoration: none
+
+.resultView
+	background: #ffffff;
+	border: 1px solid #aaa
+	border-radius: 4px
