--- a/components/get_content_and_convert/conver.module.sass
+++ b/components/get_content_and_convert/conver.module.sass
@@ -8,5 +8,5 @@
 
 .resultView
 	background: #ffffff;
-	// border: 1px solid #aaa
+	// border: 1px solid rgba(40, 42, 54, 0.692)
 	border-radius: 4px
